tests/compile/command_modules/pipeline_kind.expected
#ifdef __clang__
In file included from pipeline_kind.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:89:17: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
pipeline_kind.cpp:87:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::ActivatePipeline<rcgp::PipelineKind::eRasterization>, rcgp::DependencyIndicatorForIndexBuffer<rcgp::Topology::eTriangleList>, rcgp::TerminalSentinel<rcgp::PipelineKind::eCompute>>' requested here
   87 |                 | dispatch(1);
      |                 ^
In file included from pipeline_kind.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:89:17: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
pipeline_kind.cpp:104:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::ActivatePipeline<rcgp::PipelineKind::eCompute>, rcgp::TerminalSentinel<rcgp::PipelineKind::eRasterization>>' requested here
  104 |                 | draw(3);
      |                 ^
In file included from pipeline_kind.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:108:17: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
  108 |                 static_assert(false, norm.second);
      |                               ^~~~~
pipeline_kind.cpp:133:19: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::TerminalSentinel<rcgp::PipelineKind::eRasterization>>' requested here
  133 |         auto cmds = live | draw(3);
      |                          ^
In file included from pipeline_kind.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:89:17: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
pipeline_kind.cpp:163:21: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::ActivatePipeline<rcgp::PipelineKind::eRasterization>, rcgp::NormalEntry<norm_entry{{4, nullptr, 0}, 3, {{0, 0}, {0, 0}}, nullptr}>, rcgp::TerminalSentinel<rcgp::PipelineKind::eCompute>>' requested here
  163 |         auto cmds = stage1 | dispatch(1);
      |                            ^
4 errors generated.
#elif defined(__GNUC__)
#if __GNUC__ == 16
In file included from include/rcgp-meta.hpp:9,
                 from include/rcgp.hpp:4,
                 from tests/compile/command_modules/pipeline_kind.cpp:1:
include/meta/commands.hpp: In instantiation of 'auto rcgp::operator|(const Commands<false, Effects ...>&, const Commands<false, B ...>&) [with A = {ActivatePipeline<rcgp::PipelineKind::eRasterization>, DependencyIndicatorForIndexBuffer<rcgp::Topology::eTriangleList>}; B = {TerminalSentinel<rcgp::PipelineKind::eCompute>}]':
tests/compile/command_modules/pipeline_kind.cpp:87:15:   required from here
   87 |                 | dispatch(1);
      |                             ^
include/meta/commands.hpp:89:31: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
  • 'false' evaluates to false
include/meta/commands.hpp: In instantiation of 'auto rcgp::operator|(const Commands<false, Effects ...>&, const Commands<false, B ...>&) [with A = {ActivatePipeline<rcgp::PipelineKind::eCompute>}; B = {TerminalSentinel<rcgp::PipelineKind::eRasterization>}]':
tests/compile/command_modules/pipeline_kind.cpp:104:11:   required from here
  104 |                 | draw(3);
      |                         ^
include/meta/commands.hpp:89:31: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
  • 'false' evaluates to false
include/meta/commands.hpp: In instantiation of 'auto rcgp::operator|(Commands<true, Effects ...>, const Commands<false, B ...>&) [with A = {}; B = {TerminalSentinel<rcgp::PipelineKind::eRasterization>}]':
tests/compile/command_modules/pipeline_kind.cpp:133:27:   required from here
  133 |         auto cmds = live | draw(3);
      |                                  ^
include/meta/commands.hpp:108:31: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
  108 |                 static_assert(false, norm.second);
      |                               ^~~~~
  • 'false' evaluates to false
include/meta/commands.hpp: In instantiation of 'auto rcgp::operator|(const Commands<false, Effects ...>&, const Commands<false, B ...>&) [with A = {ActivatePipeline<rcgp::PipelineKind::eRasterization>, NormalEntry<norm_entry{norm_key{rcgp::KeyKind::eIndex, 0, rcgp::Topology::eTriangleList}, rcgp::NormOp::ePendingDep, norm_bar{norm_phase{rcgp::PipelineStage::eNone, rcgp::ResourceAccess::eNone}, norm_phase{rcgp::PipelineStage::eNone, rcgp::ResourceAccess::eNone}}, 0}>}; B = {TerminalSentinel<rcgp::PipelineKind::eCompute>}]':
tests/compile/command_modules/pipeline_kind.cpp:163:33:   required from here
  163 |         auto cmds = stage1 | dispatch(1);
      |                                        ^
include/meta/commands.hpp:89:31: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
  • 'false' evaluates to false
#elif __GNUC__ == 15
In file included from include/rcgp-meta.hpp:9,
                 from include/rcgp.hpp:4,
                 from tests/compile/command_modules/pipeline_kind.cpp:1:
include/meta/commands.hpp: In instantiation of 'auto rcgp::operator|(const Commands<false, Effects ...>&, const Commands<false, B ...>&) [with A = {ActivatePipeline<rcgp::PipelineKind::eRasterization>, DependencyIndicatorForIndexBuffer<rcgp::Topology::eTriangleList>}; B = {TerminalSentinel<rcgp::PipelineKind::eCompute>}]':
tests/compile/command_modules/pipeline_kind.cpp:87:15:   required from here
   87 |                 | dispatch(1);
      |                             ^
include/meta/commands.hpp:89:31: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
include/meta/commands.hpp:89:31: note: 'false' evaluates to false
include/meta/commands.hpp: In instantiation of 'auto rcgp::operator|(const Commands<false, Effects ...>&, const Commands<false, B ...>&) [with A = {ActivatePipeline<rcgp::PipelineKind::eCompute>}; B = {TerminalSentinel<rcgp::PipelineKind::eRasterization>}]':
tests/compile/command_modules/pipeline_kind.cpp:104:11:   required from here
  104 |                 | draw(3);
      |                         ^
include/meta/commands.hpp:89:31: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
include/meta/commands.hpp:89:31: note: 'false' evaluates to false
include/meta/commands.hpp: In instantiation of 'auto rcgp::operator|(Commands<true, Effects ...>, const Commands<false, B ...>&) [with A = {}; B = {TerminalSentinel<rcgp::PipelineKind::eRasterization>}]':
tests/compile/command_modules/pipeline_kind.cpp:133:27:   required from here
  133 |         auto cmds = live | draw(3);
      |                                  ^
include/meta/commands.hpp:108:31: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
  108 |                 static_assert(false, norm.second);
      |                               ^~~~~
include/meta/commands.hpp:108:31: note: 'false' evaluates to false
include/meta/commands.hpp: In instantiation of 'auto rcgp::operator|(const Commands<false, Effects ...>&, const Commands<false, B ...>&) [with A = {ActivatePipeline<rcgp::PipelineKind::eRasterization>, NormalEntry<norm_entry{norm_key{rcgp::KeyKind::eIndex, 0, rcgp::Topology::eTriangleList}, rcgp::NormOp::ePendingDep, norm_bar{norm_phase{rcgp::PipelineStage::eNone, rcgp::ResourceAccess::eNone}, norm_phase{rcgp::PipelineStage::eNone, rcgp::ResourceAccess::eNone}}, 0}>}; B = {TerminalSentinel<rcgp::PipelineKind::eCompute>}]':
tests/compile/command_modules/pipeline_kind.cpp:163:33:   required from here
  163 |         auto cmds = stage1 | dispatch(1);
      |                                        ^
include/meta/commands.hpp:89:31: error: static assertion failed: command recording: terminal directive expects a different pipeline kind than the one currently bound
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
include/meta/commands.hpp:89:31: note: 'false' evaluates to false
#endif
#endif
